[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "igusd1"
version = "0.1.0"
description = "Python driver for the Igus dryve D1 controller"
authors = [{name = "Aliaksandr Nazaruk"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Home = "https://example.com"

[project.scripts]
igusd1-emulator = "igusd1.emulator:main"
